add docker compose file with external systems

--- a/SocialMicroservice/src/main/resources/application.properties
+++ b/SocialMicroservice/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=SocialMicroservice
+
+server.port=8084
+
+spring.datasource.url=jdbc:postgresql://localhost:5435/db3
+spring.datasource.username=user
+spring.datasource.password=pass
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Optional: Hibernate config
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
