--- a/AdminMicroservice/src/main/resources/application.properties
+++ b/AdminMicroservice/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=AdminMicroservice
+
+server.port=8081
+
+spring.datasource.url=jdbc:postgresql://localhost:5433/db1
+spring.datasource.username=user
+spring.datasource.password=pass
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Optional: Hibernate config
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
