--- a/ReservationMicroservice/src/main/resources/application.properties
+++ b/ReservationMicroservice/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=ReservationMicroservice
+
+server.port=8083
+
+spring.datasource.url=jdbc:postgresql://localhost:5434/db2
+spring.datasource.username=user
+spring.datasource.password=pass
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Optional: Hibernate config
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
