--- a/ReservationMicroservice/src/main/resources/application.properties
+++ b/ReservationMicroservice/src/main/resources/application.properties
@@ -7,6 +7,11 @@ spring.datasource.username=user
 spring.datasource.password=pass
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=rabbit
+spring.rabbitmq.password=rabbitpass
+
 # Optional: Hibernate config
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
